@@ -1,5 +1,6 @@
 0000-00-00:
     * version 0.8.2
+    * Fix message link icons CSS
 
 2011-10-14:
     * version 0.8.1
